# icfpc2025

./: .env.example  Cargo.toml  README.md  tmp.py
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/client/: Cargo.toml  README.md
crates/client/examples/: basic_usage.rs
crates/client/src/: client.rs  lib.rs  types.rs
crates/common/: Cargo.toml
crates/common/src/: interfaces.rs  lib.rs  types.rs
crates/greedy/: Cargo.toml
crates/greedy/src/: main.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs
python/: main.py  pyproject.toml  sat_external.py
reporter/: package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
reporter/src/: index.ts
