[package]
name = "icfpc2025-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for ICFPC 2025 Aedificium contest"
license = "MIT"

[[bin]]
name = "aedificium"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
dotenvy = "0.15"
icfpc2025-client = { path = "../client" }