[package]
name = "icfpc2025-client"
version = "0.1.0"
edition = "2021"
description = "Rust API client for ICFPC 2025 Aedificium contest"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
