[package]
name = "icfpc2025-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
icfpc2025-common = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rand = "0.8"
